fixed footer bug where text wasn't aligning in the center

--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,7 @@ p {
     justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
+    /*    flex-wrap: wrap;*/
 }
 
 #footer h4,
